[package]
name = "finance"
version = "0.1.0"
edition = "2021"

[dependencies]
yahoo_finance_api = "2.1.0"
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4.3"
prettytable = "0.10.0"
chrono = "0.4"
num-format = "0.4.4"
dialoguer = "0.8"
csv = "1.1"
plotters = "0.3.5"

[dev-dependencies]
tokio = { version = "1", features = ["full"]}


[[bin]]
name = "main"
path = "main.rs"
